@@ -1,13 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.586 2006/02/06 15:41:19 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.587 2006/02/07 02:05:38 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
   6 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/templates/x86ArchitectureTemplate.py:
   10 tries to create filesystem instead of 3
+  src/GLIPortage, src/GLIArchitectureTemplate.py:
+  ignore_missing flag for copy_pkg_to_chroot()
 
   5 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIPortage.py:
